--- a/Python/Pandas/08-Grouping-Aggregates/Pandas-Demo.ipynb
+++ b/Python/Pandas/08-Grouping-Aggregates/Pandas-Demo.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-29T23:19:49.845629Z",
-     "start_time": "2021-05-29T23:19:49.842345Z"
+     "end_time": "2021-05-30T05:33:00.770153Z",
+     "start_time": "2021-05-30T05:32:58.125021Z"
     }
    },
    "outputs": [],
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-29T23:26:36.263916Z",
-     "start_time": "2021-05-29T23:26:33.660729Z"
+     "end_time": "2021-05-30T05:33:04.021413Z",
+     "start_time": "2021-05-30T05:33:00.772931Z"
     }
    },
    "outputs": [],
@@ -31,11 +31,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-29T23:26:38.237935Z",
-     "start_time": "2021-05-29T23:26:38.234543Z"
+     "end_time": "2021-05-30T05:33:04.031682Z",
+     "start_time": "2021-05-30T05:33:04.027507Z"
     }
    },
    "outputs": [],
@@ -46,11 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-29T23:26:38.551985Z",
-     "start_time": "2021-05-29T23:26:38.445261Z"
+     "end_time": "2021-05-30T05:33:04.179193Z",
+     "start_time": "2021-05-30T05:33:04.035065Z"
     },
     "scrolled": false
    },
@@ -1083,7 +1083,7 @@
        "5           Appropriate in length                        Easy  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1094,53 +1094,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-29T23:26:58.946532Z",
-     "start_time": "2021-05-29T23:26:58.941361Z"
+     "end_time": "2021-05-30T05:33:34.035139Z",
+     "start_time": "2021-05-30T05:33:34.023108Z"
     }
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ConvertedComp</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Respondent</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8820.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>61000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>366420.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>95179.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>13293.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>90000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>57060.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Respondent\n",
-       "1          NaN\n",
-       "2          NaN\n",
-       "3       8820.0\n",
-       "4      61000.0\n",
-       "5          NaN\n",
-       "6     366420.0\n",
-       "7          NaN\n",
-       "8          NaN\n",
-       "9      95179.0\n",
-       "10     13293.0\n",
-       "11         NaN\n",
-       "12         NaN\n",
-       "13     90000.0\n",
-       "14     57060.0\n",
-       "15         NaN\n",
-       "Name: ConvertedComp, dtype: float64"
+       "            ConvertedComp\n",
+       "Respondent               \n",
+       "1                     NaN\n",
+       "2                     NaN\n",
+       "3                  8820.0\n",
+       "4                 61000.0\n",
+       "5                     NaN\n",
+       "6                366420.0\n",
+       "7                     NaN\n",
+       "8                     NaN\n",
+       "9                 95179.0\n",
+       "10                13293.0\n",
+       "11                    NaN\n",
+       "12                    NaN\n",
+       "13                90000.0\n",
+       "14                57060.0\n",
+       "15                    NaN"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Checking the top 15 files\n",
-    "df['ConvertedComp'].head(15)"
+    "pd.DataFrame(df['ConvertedComp'].head(15))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-29T23:27:01.145581Z",
-     "start_time": "2021-05-29T23:27:01.138076Z"
+     "end_time": "2021-05-30T05:33:24.714563Z",
+     "start_time": "2021-05-30T05:33:24.693205Z"
     }
    },
    "outputs": [
@@ -1150,7 +1241,7 @@
        "57287.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
